# hackopedia

./: .gitignore  LICENSE  hackopedia.cabal
app/: Main.hs
src/Web/: Hackopedia.hs
test/: Spec.hs
