name:                hackopedia
version:             0.1.0.0
synopsis:            Hack wikipedia
description:         Please see README.md
homepage:            http://github.com/fakedrake/hackopedia#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Perivolaropoulos
maintainer:          cperivol@csail.mit.edu
copyright:           2016 Chris Perivolaropoulos
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Hackopedia
  build-depends:       base >= 4.7
                     , bytestring >= 0.10.6.0
                     , lens >= 4.13
                     , HaXml >= 1.25.3
                     , wreq
                     , regex-tdfa >= 1.2.1
  default-language:    Haskell2010

executable hackopedia-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hackopedia
  default-language:    Haskell2010

test-suite hackopedia-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck >= 2.8.1
                     , base
                     , bytestring >= 0.10.6.0
                     , hackopedia
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fakedrake/hackopedia
